# alex-gmr-retargeting

./: .gitignore  CLAUDE.md  CONTACT_FIRST_SUMMARY.md  GLOBALOPT_CONTACTFIRST_PLAN.md  GMR-METHOD.md  GMR-S4-plan.md  GMR-S5-plan.md  GMR-S6-plan.md  GMR-S7-plan.md  GMR-S8-plan.md  GMR-S9-plan.md  GMR-baseline-plan.md  GMR-baseline-results.md  GMR-baseline.md  METHOD.md  PARAMETERS.md  PROJECT_DESCRIPTION.md  README.md  RETARGETING_FLOWCHART.md  RETARGETING_METHOD.md  SESSION_HANDOFF.md  collision.md  collisionFixPlan.md  hierarchical.md  last.md  new.md  notes.md  paperIdea2.md  paperIdea3.md  paper_idea.md  paper_intro.md  plan.md  planLog.md  planLogGMR.md  pyproject.toml  retargetingPipeline.sh  run_globalopt_all.sh  run_highori_weights.sh
paper/: abstract.md  conclusions.md  discussion.md  introduction.md  methods.md  references.bib  results.md
scripts/: README.md  analyze_alex_rest_pose_alignment.py  analyze_contact_flicker.py  analyze_contact_slip_jumps.py  analyze_foot_slip.py  build_alex_v2_collision_model.py  build_canonical_orientation_frames_fresh.py  build_canonical_segment_orientations.py  build_fbx_canonical_human.py  build_fbx_kinematic_canonical_v2.py  compare_alex_palm_runs.py  compare_hand_support_pose.py  compare_ori_weights.py  compute_globalopt_metrics.py  contact_labels.py  create_alex_mujoco_sites_model.py  dev_cont_probe.py  diagnose_alex_vs_canonical_pose.py  diagnose_floor_penetration.py  diagnose_foot_slip.py  diagnose_morphology_delta_scales.py  eval_artifacts_corpus.py  eval_ihmc_json.py  evaluate_alex_retarget_run.py  jointLimitCheck.py  (+28 more)
(+148 files in other folders)
